# ruby-proto-grpc

./: .bazelrc  BUILD  MODULE.bazel  README.md  rules_ruby.patch
proto/: foo.proto  ruby.bzl
tools/: BUILD
